--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
+    "mongoose": "^5.9.14",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
