--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.4.1",
     "mongoose": "^5.9.14",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.0.0"
   },
   "devDependencies": {
